# ChangeLog for dev-java/sun-jdk
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.175 2007/01/05 23:43:09 caster Exp $

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.5.0.08.ebuild,
  sun-jdk-1.5.0.09.ebuild, sun-jdk-1.5.0.09-r1.ebuild:
  Convert einfo to elog.

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> sun-jdk-1.4.2.13.ebuild:
  Stable on x86, bug #158659.

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> sun-jdk-1.5.0.09.ebuild:
  Stable on x86, bug #158659.

  17 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.6.0-r1.ebuild:
  Change the desktop entry to be more similar to earlier slots.

*sun-jdk-1.6.0-r1 (16 Dec 2006)

  16 Dec 2006; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.6.0-r1.ebuild:
  Fix the control panel desktop menuitem wrt bug #158243 by nunogt
  <nunogt@gmail.com>.

*sun-jdk-1.6.0 (13 Dec 2006)

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> +files/sun-jdk-1.6.env,
  +sun-jdk-1.6.0.ebuild:
  A minor version bump I bet nobody cares about (bug #133657).

*sun-jdk-1.5.0.10 (03 Dec 2006)

  03 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.5.0.10.ebuild:
  Version bump using the new pax-utils.eclass (bug #156135). Thanks to Kevin
  F. Quinn <kevquinn@gentoo.org>.

*sun-jdk-1.4.2.13 (23 Nov 2006)

  23 Nov 2006; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.4.2.13.ebuild:
  Version bump wrt bug #155822.

*sun-jdk-1.5.0.09-r1 (22 Nov 2006)

  22 Nov 2006; Vlastimil Babka <caster@gentoo.org>
  +files/fontconfig.Gentoo.properties, +sun-jdk-1.5.0.09-r1.ebuild:
  Revbump to fix bug #56444 with fontconfig.properties based on RedHat 9.0,
  provided by MATSUU Takuto <matsuu@gentoo.org>.

*sun-jdk-1.5.0.09 (21 Nov 2006)

  21 Nov 2006; Joshua Nichols <nichoj@gentoo.org> +sun-jdk-1.5.0.09.ebuild:
  Version bump, see bug #150421.

  21 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  sun-jdk-1.4.2.12-r2.ebuild: