@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jre-bin
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.73 2006/12/23 17:51:38 ticho Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.74 2007/01/09 23:46:44 malc Exp $
+
+  09 Jan 2007; <malc@gentoo.org> sun-jre-bin-1.4.2.13.ebuild,
+  sun-jre-bin-1.5.0.09.ebuild:
+  Stable on amd64 wrt bug #158659
 
   23 Dec 2006; Andrej Kacian <ticho@gentoo.org> sun-jre-bin-1.4.2.13.ebuild:
   Stable on x86, bug #158659.
