@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.175 2007/01/05 23:43:09 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.176 2007/01/09 23:50:31 malc Exp $
+
+  09 Jan 2007; <malc@gentoo.org> sun-jdk-1.4.2.13.ebuild,
+  sun-jdk-1.5.0.09.ebuild:
+  Stable on amd64 wrt bug #158659
 
   05 Jan 2007; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.5.0.08.ebuild,
   sun-jdk-1.5.0.09.ebuild, sun-jdk-1.5.0.09-r1.ebuild:
